# hsipc

./: .gitignore  CARGO_RELEASE_USAGE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASE_TESTING.md  debug_transport_test.rs  minimal_test.rs  release-test.toml  release.toml  test_multiprocess.sh  test_new_rpc.rs  test_serialization.rs  test_transport_debug.rs  trait_vs_impl_comparison.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release-test.yml  release.yml
docs/: API.md  ARCHITECTURE.md  COMPREHENSIVE-TESTING.md  ERROR_HANDLING.md  EXAMPLES.md  GETTING_STARTED.md  PERFORMANCE.md  TDD-GIT-WORKFLOW.md  TESTING.md  git-instructions.md
examples/pubsub_events/: Cargo.toml
examples/pubsub_events/src/: main.rs
examples/request_response/: Cargo.toml
examples/request_response/src/: main.rs
examples/rpc_system_demo/: Cargo.toml
examples/rpc_system_demo/src/: main.rs
examples/trait_based_service/: Cargo.toml  README.md
examples/trait_based_service/src/: main.rs
hsipc/: Cargo.toml
hsipc-macros/: Cargo.toml
hsipc-macros/src/: event.rs  lib.rs  method.rs  rpc.rs  service.rs  subscribe.rs  subscription.rs
hsipc-macros/tests/: integration.rs  integration.rs.bak  rpc_tdd_test.rs
hsipc/benches/: simple_benchmarks.rs
hsipc/src/: error.rs  error_tests.rs  event.rs  hub.rs  lib.rs  message.rs  service.rs  subscription.rs  tests.rs  transport.rs  transport_ipmb.rs
scripts/: benchmark.sh  multiprocess_test.sh  quick_test.sh  release.sh  smart_test.sh  test-release.sh  version.sh
tests/: example_integration_tests.rs  load_and_performance_tests.rs  multiprocess_integration_tests.rs  test_utilities.rs
