[workspace]
members = [
    "hsipc",
    "hsipc-macros",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/hsipc"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
ipmb = "0.8"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
futures = "0.3"
pin-project = "1.1"
once_cell = "1.19"

# Macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"