[workspace]
members = [
    "hsipc",
    "hsipc-macros",
    "examples/*",
]
exclude = [
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["loyalpartner <lee@yizhisec.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/loyalpartner/hsipc"
homepage = "https://github.com/loyalpartner/hsipc"
documentation = "https://docs.rs/hsipc"
description = "High-performance inter-process communication framework in Rust"
keywords = ["ipc", "rpc", "async", "communication", "framework"]
categories = ["network-programming", "concurrency", "asynchronous"]
readme = "README.md"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
ipmb = "0.8"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
futures = "0.3"
pin-project = "1.1"
once_cell = "1.19"
type-uuid = "0.1"
serde_json = "1.0"
log = "0.4"

# Macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Benchmark dependencies
criterion = { version = "0.5", features = ["html_reports"] }
