[package]
name = "hsipc-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Procedural macros for hsipc - High-performance inter-process communication framework"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
hsipc = { path = "../hsipc" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
