[package]
name = "hsipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
ipmb = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
once_cell = { workspace = true }
type-uuid = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

# Optional: re-export macros
hsipc-macros = { path = "../hsipc-macros", version = "0.1.2", optional = true }

[features]
default = ["macros"]
macros = ["hsipc-macros"]
runtime = ["tokio/rt-multi-thread"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "simple_benchmarks"
harness = false
