[package]
name = "pubsub_events"
version = "0.1.3"
edition = "2021"
publish = false

[dependencies]
hsipc = { path = "../../hsipc" }
hsipc-macros = { path = "../../hsipc-macros" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
