[package]
name = "request_response"
version = "0.1.0"
edition = "2021"

[dependencies]
hsipc = { path = "../../hsipc" }
hsipc-macros = { path = "../../hsipc-macros" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"