[package]
name = "trait_based_service"
version = "0.1.0"
edition = "2021"

[dependencies]
hsipc = { path = "../../hsipc", features = ["macros"] }
hsipc-macros = { path = "../../hsipc-macros" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"