[package]
name = "trait_based_service"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
hsipc = { path = "../../hsipc", features = ["macros"] }
hsipc-macros = { path = "../../hsipc-macros" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
